--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Loku</string>
-    <string name="hello_world_title">Hello, Loku!</string>
-    <string name="hello_world_subtitle">Your social canvas is coming soon.</string>
+    <string name="feed_title">Discover</string>
+    <string name="likes_label">likes</string>
 </resources>
